--- a/profiles/openasu/themes/elpuente/sass/nav.scss
+++ b/profiles/openasu/themes/elpuente/sass/nav.scss
@@ -7,7 +7,7 @@
 /* =NAVBAR -- Part of Main Menu styling! --- NOT DONE
 -------------------------------------------------------------- */
 .navmenu {
-  border-bottom: 1px solid $ws2-gray-light;
+  border-bottom: 1px solid $ws2-gray-lighter;
   .container {
     padding-left: 0;
     padding-right: 0;
